# Siora

backend/: .gitignore  README.md  pyproject.toml  requirements.txt
backend/app/: auth.py  calendar_api.py  chat.py  config.py  db.py  deps.py  events.py  main.py  models.py  schemas.py  utils.py
frontend/: next.config.cjs  next.config.mjs  package.json  pnpm-lock.yaml
frontend/src/app/: page.tsx
frontend/src/app/auth/callback/: page.tsx
frontend/src/app/connected/: page.tsx
frontend/src/components/: CalendarEvents.tsx  Chat.tsx  LoginCard.tsx  NewEventForm.tsx
frontend/src/lib/: api.ts  sse.ts
